--- a/health.html
+++ b/health.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link ref="sytlesheet" href="health.css">
 </head>
 <body>
     <header></header>
     <nav>
         <h1>HEALTH-IN-ME</h1>
-        <div>
+        <div class="menubar">
             <ul>
                 <li>HOME</li>
                 <li>APPOINTEMT</li>
