--- a/health.html
+++ b/health.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link ref="sytlesheet" href="health.css">
+    <link rel="stylesheet" href="health.css">
 </head>
+
 <body>
     <header></header>
     <nav>
         <h1>HEALTH-IN-ME</h1>
         <div class="menubar">
             <ul>
-                <li>HOME</li>
-                <li>APPOINTEMT</li>
-                <li>HOSPITAL</li>
-                <li>ABOUT</li>
-                <li>CONTACT</li>
-                
+                <li id="#"><a href="/">HOME</a></li>
+                <li id="#"><a href="/">APPOINTEMT</a></li>
+                <li id="#"><a href="/">HOSPITAL</a></li>
+                <li id="#"><a href="/">ABOUT</a></li>
+                <li id="#"><a href="/">CONTACT</a></li>
+                <li id="#"><a href="/">LOGIN</a></li>
             </ul>
         </div>
     </nav>
