--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li id="#home"><a href="/">HOME</a></li>
             <li id="#"><a href="/">APPOINTEMT</a></li>
             <li id="#"><a href="/">HOSPITAL</a></li>
-            <li id="#"><a href="/">ABOUT</a></li>
+            <li id="#about"><a href="/">ABOUT</a></li>
             <li id="#"><a href="/">CONTACT</a></li>
             <li id="#"><a href="/">LOGIN</a></li>
         </ul>     
