--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li id="#"><a href="/">HOSPITAL</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li id="#"><a href="/">CONTACT</a></li>
-                <li id="#"><a href="/">LOGIN</a></li>
+                <li id="#"><a href="/">SIGN UP</a></li>
             </ul>
         </div>
     </nav>
