i never change background

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                                          <!--- home section--->
         <section class="homesection" id="home">
             <div class = "slideshow">
-                <img src="a.webp" class ="slideimg">
-                <img src="b.jpg" class ="slideimg">
-                <img src="c.jpg" class ="slideimg">
+                <img src="a.front page " class ="slideimg">
+                <img src="b.front of web" class ="slideimg">
+                <img src="c.front page" class ="slideimg">
 
                 <div class="slidebtn">
                     <button class="leftbtn" onclick="plusdivs(-1)">&#10094;</button>
@@ -41,39 +41,39 @@
             <h1>SERVICE</h1>
             <div class="sertype">
                 <div class="box">
-                    <img src="nurse.png"></img>
-                    <p>NURSE</p>
+                    <img src="art background"></img>
+                    <p>ART</p>
                     <details>
                         <summary>more</summary>
-                        <p>B.sc nurse</p>
-                        <p>GMN nurse</p>
+                        <p>Creativity takes courage</p>
+                        <p>Painting is just another way of keeping a diary</p>
                     </details>
                 </div>
                 <div class="box">
-                    <img></img>
-                    <h5>nurse</h5>
+                    <img>dance background </img>
+                    <h5>DANCE</h5>
                     <details>
                         <summary>more</summary>
-                        <p>B.sc nurse</p>
-                        <p>GMN nurse</p>
+                        <p>Dance is the joy of the movement and the heart of life</p>
+                        <p>To watch us Dance is to hear our heart speak</p>
                     </details>
                 </div>
                 <div class="box">
-                    <img></img>
-                    <h5>nurse</h5>
+                    <img>music background</img>
+                    <h5>MUSIC</h5>
                     <details>
                         <summary>more</summary>
-                        <p>B.sc nurse</p>
-                        <p>GMN nurse</p>
+                        <p>Music is a moral law</p>
+                        <p>Music expresses that which cannot be said and on which is it is impossble to be silent</p>
                     </details>
                 </div>
                 <div class="box">
-                    <img></img>
-                    <h5>nurse</h5>
+                    <img>sports background</img>
+                    <h5>SPORTS&GAMES</h5>
                     <details>
                         <summary>more</summary>
-                        <p>B.sc nurse</p>
-                        <p>GMN nurse</p>
+                        <p>Failures are finger posts on the road to achievement </p>
+                        <p>Champions aren't made in the gyms. Champions are made from something they have deep inside them- a desire, a dream, a vision</p>
                     </details>
                 </div>
                 
@@ -92,7 +92,7 @@
         <ul>
             <li id="#home"><a href="/">HOME</a></li>
             <li id="#"><a href="/">APPOINTEMT</a></li>
-            <li id="#"><a href="/">HOSPITAL</a></li>
+            <li id="#"><a href="/">THERAPIST</a></li>
             <li id="#about"><a href="/">ABOUT</a></li>
             <li id="#"><a href="/">CONTACT</a></li>
             <li id="#"><a href="/">LOGIN</a></li>
