i never change about

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
         <section id="about">
             <h1>ABOUT</h1>
-            <div class="text"></div>
+            <div class="text">Not only the Medicine but the therapy can also gift a person to a cure able health(life)</div>
         </section>
     
     </main>
