--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#service">SERVICE</a></li>
                 <li id="#"><a href="/">HOSPITAL</a></li>
                 <li><a href="#about">ABOUT</a></li>
-                <li id="#"><a href="/">CONTACT</a></li>
+                <li id="#contact"><a href="/">CONTACT</a></li>
                 <li id="#"><a href="/">SIGN UP</a></li>
             </ul>
         </div>
@@ -26,9 +26,9 @@
                                          <!--- home section--->
         <section class="homesection" id="home">
             <div class = "slideshow">
-                <img src="a.front page " class ="slideimg">
-                <img src="b.front of web" class ="slideimg">
-                <img src="c.front page" class ="slideimg">
+                <img src="p..jpg" class ="slideimg">
+                <img src="q..jpg" class ="slideimg">
+                <img src="r..jpg" class ="slideimg">
 
                 <div class="slidebtn">
                     <button class="leftbtn" onclick="plusdivs(-1)">&#10094;</button>
@@ -41,7 +41,7 @@
             <h1>SERVICE</h1>
             <div class="sertype">
                 <div class="box">
-                    <img src="art background"></img>
+                    <img src="w..webp"></img>
                     <p>ART</p>
                     <details>
                         <summary>more</summary>
@@ -50,7 +50,7 @@
                     </details>
                 </div>
                 <div class="box">
-                    <img>dance background </img>
+                    <img src="x..avif"></img>
                     <h5>DANCE</h5>
                     <details>
                         <summary>more</summary>
@@ -59,7 +59,7 @@
                     </details>
                 </div>
                 <div class="box">
-                    <img>music background</img>
+                    <img src="y..jpg"></img>
                     <h5>MUSIC</h5>
                     <details>
                         <summary>more</summary>
@@ -68,8 +68,8 @@
                     </details>
                 </div>
                 <div class="box">
-                    <img>sports background</img>
-                    <h5>SPORTS&GAMES</h5>
+                    <img src="z..jpg"></img>
+                    <h5>GAMES</h5>
                     <details>
                         <summary>more</summary>
                         <p>Failures are finger posts on the road to achievement </p>
@@ -82,6 +82,11 @@
         <section id="about">
             <h1>ABOUT</h1>
             <div class="text">Not only the Medicine but the therapy can also gift a person to a cure able health(life)</div>
+        </section>
+        <section id="contact">
+            <h1>CONTACT</h1>
+            <P>EMAIL ID-<a href="mailto:ankitriyan09@gmail.com">healthinme09@gmail.com</a></P>
+            
         </section>
     
     </main>
