--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#service">SERVICE</a></li>
-                <li id="#"><a href="/">HOSPITAL</a></li>
+                <li id="#"><a href="/">THERAPIST</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li id="#contact"><a href="/">CONTACT</a></li>
                 <li id="#"><a href="/">SIGN UP</a></li>
